@@ -20,6 +20,7 @@ Trunk (unreleased changes)
     HADOOP-1747 On a cluster, on restart, regions multiply assigned
     HADOOP-1776 Fix for sporadic compaction failures closing and moving
     compaction result
+    HADOOP-1780 Regions are still being doubly assigned
 
   IMPROVEMENTS
     HADOOP-1737 Make HColumnDescriptor data publically members settable
